--- a/INET2005_FinalProject/appsettings.json
+++ b/INET2005_FinalProject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "INET2005_FinalProjectContext": "Server=tcp:nscc-0462954-mssql.database.windows.net,1433;Initial Catalog=nscc-w0462954;Persist Security Info=False;User ID=nsccadmin;Password=nin--TERRIBLELIE1989;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
